--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="user-card">
-        <img class="avatar" src="images\profile-pic.png" alt="Profile Picture">
+        <img class="avatar" src="images\profile-pic.jpg" alt="Profile Picture">
         <div class="user-details">
         <h1 class="username">
             Abhay
